Swagger Implementation. Auth Security field added.
